# swagger.yml
@@ -24,7 +24,7 @@ paths:
       description: allows login of existing users
       produces:
       - application/json
-      consume: 
+      consumes:
       - application/json
       parameters:
       - in: body
@@ -45,6 +45,8 @@ paths:
           description: bad username/password combination
         500:
           description: internal server error
+          schema:
+            $ref: '#/definitions/Error'
   /create:
     post:
       summary: create users
@@ -52,7 +54,7 @@ paths:
       description: create a new user with username and password
       produces:
       - application/json
-      consume: 
+      consumes:
       - application/json
       parameters:
       - in: body
@@ -77,8 +79,32 @@ paths:
         500:
           description: internal server error
           schema:
-            type: string
-            example: uwu we make mistake
+            $ref: '#/definitions/Error'
+  /verify:
+    post:
+      summary: verify the jwt
+      operationId: verify
+      description: verify the signature of this jwt
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      parameters:
+      - in: body
+        name: token
+        description: token to be verified
+        schema:
+          $ref: '#/definitions/Token'
+          
+      responses:
+        204:
+          description: valid token
+        403:
+          description: token was not valid
+        500:
+          description: internal server error
+          schema:
+            $ref: '#/definitions/Error'
       
           
 
@@ -95,8 +121,28 @@ definitions:
       password:
         type: string
         example: badPassword
+  Token:
+    type: object
+    required:
+      - token
+    properties:
+      token:
+        type: string
+        example: aaa.bbb.ccc
+  Error:
+    type: object
+    required:
+      - code
+      - message
+    properties: 
+      code:
+        type: integer
+        example: 200
+      message:
+        type: string
+        example: error message lol
 # Added by API Auto Mocking Plugin
 host: virtserver.swaggerhub.com
 basePath: /vcongos/andyauth/1.0.0
 schemes:
- - http
+ - https
